# 42-So-long

./: CMakeLists.txt  Makefile  counter_bonus.c  enemies_bonus.c  enemy_movement_bonus.c  exit.c  exit_bonus.c  ft_strdup.c  ft_strlcpy.c  ft_strlen.c  list_control.c  loop_hook_bonus.c  main.c  main_backup.c  makefile  map_import.c  map_modification.c  map_updates.c  map_updates_bonus.c  map_validation.c  movement.c  movement_bonus.c  path_validation.c  random_bonus.c  so_long  so_long.c  so_long.h  so_long_bonus.c  so_long_bonus.h  utils.c  walls.c
bonus/: hook_loop_bonus.c  so_long_bonus.c  so_long_bonus.h
libft/: Makefile  get_next_line.c  libft.h
maps/: empty.ber
mlx/: mlx.h
sprites/: Coin_taken.xpm  Door_2.xpm  Enemy_jumping.xpm  Left_corner.xpm  Left_upper_corner.xpm  Placeholder_Coin.xpm  Placeholder_Door.xpm  Placeholder_Wall.xpm  Right_corner.xpm  Statue.xpm  Wall.xpm  Wall_temp.xpm
textures/Enemy/: Enemy1.xpm  Enemy2.xpm  Enemy_idle.xpm  Enemy_jumping.xpm
textures/Map/: Coin.xpm  Coin2.xpm  Coin3.xpm  Door_Closed.xpm  Door_Open.xpm  Floor.xpm
textures/Misc/: Black.xpm  Game_over.xpm
textures/Numbers/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  7.xpm  8.xpm  9.xpm
textures/Player/: Player.xpm  Player2.xpm  dead1.xpm  dead2.xpm
textures/Walls/: Left_wall.xpm  Middle_corner.xpm  Middle_wall.xpm  Right_corner.xpm  Right_upper_corner.xpm  Right_wall.xpm  Upper_middle_corner.xpm  Wall.xpm
